# hellocmake

./: CMakeLists.txt  README.md  main.cpp  recipe.txt
